kubernetes/gcloud/vamp-gateway-agent.yml
---
apiVersion: v1
kind: Service
metadata:
  name: vamp-gateway-agent
  labels:
    io.vamp: daemon
spec:
  selector:
    io.vamp: vamp-gateway-agent
  type: LoadBalancer
  loadBalancerIP: __VGA_IP_ADDRESS__
  ports:
  - port: 80
    protocol: TCP

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: vamp-gateway-agent
spec:
  replicas: 1
  template:
    metadata:
      labels:
        io.vamp: vamp-gateway-agent
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: "vamp.io"
                operator: In
                values:
                - vamp-gateway-agent
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: vamp-gateway-agent
        image: magneticio/vamp-gateway-agent:__VAMP_VERSION__
        ports:
        - name: p80
          containerPort: 80
        resources:
          requests:
            cpu: 1
            memory: 1024
