kubernetes/gcloud/vamp.yml
---
apiVersion: v1
kind: Service
metadata:
  name: vamp
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: vamp

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vamp
  annotations:
    kubernetes.io/ingress.global-static-ip-name: VAMP_IP_NAME
  labels:
    app: vamp
spec:
  backend:
    serviceName: vamp
    servicePort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vamp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vamp
  template:
    metadata:
      labels:
        app: vamp
      name: vamp
    spec:
      containers:
      - name: vamp
        image: magneticio/vamp-ee:VAMP_VERSION-kubernetes
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          requests:
            cpu: 0.2
            memory: 1024
        securityContext:
          privileged: false
      imagePullSecrets:
        - name: regsecret
